검색타이틀 문구 수정

--- a/app/src/main/res/layout/layout_search_header.xml
+++ b/app/src/main/res/layout/layout_search_header.xml
@@ -35,6 +35,6 @@
             android:textColor="@color/white"
             android:textSize="15dp"
             android:layout_centerVertical="true"
-            android:text="나우님, 어떤 여행을 찾고 있나요?" />
+            android:text="어떤 여행을 찾고 있나요?" />
     </RelativeLayout>
 </layout>
