--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -10,14 +10,42 @@
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
-       android:background="@drawable/spalsh"
-       android:scaleType="centerCrop"/>
+       android:background="@drawable/splash_new"
+       app:layout_constraintTop_toTopOf="parent"
+       app:layout_constraintBottom_toBottomOf="parent"
+       app:layout_constraintDimensionRatio="h,16:9"/>
+
+   <android.support.constraint.Guideline
+       android:id="@+id/gd_bottom"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:orientation="horizontal"
+       app:layout_constraintGuide_percent="0.3" />
+
+   <ImageView
+       android:id="@+id/text1"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:background="@drawable/splash_new_txt1"
+       app:layout_constraintBottom_toTopOf="@id/gd_bottom"
+       app:layout_constraintHorizontal_bias="0.2"
+       app:layout_constraintLeft_toLeftOf="parent"
+       app:layout_constraintRight_toRightOf="parent"/>
+
+   <android.support.constraint.Guideline
+       android:id="@+id/gd_bottom2"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       android:orientation="horizontal"
+       app:layout_constraintBottom_toTopOf="@id/text1"
+       app:layout_constraintGuide_percent="0.95" />
 
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
-       android:background="@drawable/splash_txt"
-       app:layout_constraintBottom_toBottomOf="parent"
+       android:background="@drawable/logo"
+       app:layout_constraintBottom_toTopOf="@id/gd_bottom2"
+       app:layout_constraintHorizontal_bias="0.1"
+       app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
-
 </android.support.constraint.ConstraintLayout>
