--- a/app/src/main/res/layout/activity_loading.xml
+++ b/app/src/main/res/layout/activity_loading.xml
@@ -4,17 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.hotelnow.activity.ActLoading">
+    android:background="@drawable/background">
 
-   <ImageView
+   <RelativeLayout
+       android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
-       android:adjustViewBounds="true"
-       android:background="@drawable/splash_new"
-       app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
-       app:layout_constraintDimensionRatio="h,16:9"/>
+       app:layout_constraintLeft_toLeftOf="parent"
+       app:layout_constraintRight_toRightOf="parent">
 
+      <ImageView
+          android:id="@+id/image2"
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content"
+          android:layout_centerInParent="true"
+          android:layout_alignParentBottom="true"
+          android:background="@drawable/splash_new" />
+   </RelativeLayout>
    <android.support.constraint.Guideline
        android:id="@+id/gd_bottom"
        android:layout_width="wrap_content"
@@ -45,7 +52,7 @@
        android:layout_height="wrap_content"
        android:background="@drawable/logo"
        app:layout_constraintBottom_toTopOf="@id/gd_bottom2"
-       app:layout_constraintHorizontal_bias="0.1"
+       app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
 </android.support.constraint.ConstraintLayout>
