푸시api param userid 수정, 프라이빗딜 비회원 다이얼로그 적용, 재검색 back step 적용, 쿠폰리스트 수정

--- a/app/src/main/res/layout/activity_all_privatedael.xml
+++ b/app/src/main/res/layout/activity_all_privatedael.xml
@@ -64,6 +64,17 @@
         android:overScrollMode="never"
         android:fadeScrollbars="true"></ListView>
 
+    <Button
+        android:id="@+id/bt_scroll"
+        android:layout_width="42dp"
+        android:layout_height="42dp"
+        android:background="@drawable/btn_screenup_bg"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="16dp"
+        android:layout_marginBottom="22dp"
+        style="?android:attr/borderlessButtonStyle" />
+
     <RelativeLayout
         android:id="@+id/toast_layout"
         android:layout_width="match_parent"
