--- a/app/src/main/res/layout/layout_subbanner.xml
+++ b/app/src/main/res/layout/layout_subbanner.xml
@@ -1,13 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/main_view"
     android:layout_width="match_parent"
+    android:layout_marginTop="17dp"
     android:layout_height="78dp">
+
+    <LinearLayout
+        android:id="@+id/gap2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical">
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/bg_background" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="7dp"
+            android:background="@color/back_line" />
+    </LinearLayout>
 
     <com.hotelnow.utils.ViewPagerCustom
         android:id="@+id/autoViewPager"
         android:layout_width="match_parent"
-        android:layout_height="70dp" />
+        android:layout_height="70dp"
+        android:layout_below="@id/gap2"/>
 
     <TextView
         android:id="@+id/page"
