총 호텔 수 검색 화면 , 지도 화면에서 제거, 베너1개시 스와이프 막음

--- a/app/src/main/res/layout/activity_map.xml
+++ b/app/src/main/res/layout/activity_map.xml
@@ -101,7 +101,8 @@
                 android:background="@color/purple_cc"
                 android:layout_marginBottom="10dp"
                 android:layout_marginLeft="16dp"
-                android:layout_above="@id/event_pager">
+                android:layout_above="@id/event_pager"
+                android:visibility="gone">
 
                 <TextView
                     android:id="@+id/total_item"
