--- a/app/src/main/res/layout/layout_search_map_filter_header.xml
+++ b/app/src/main/res/layout/layout_search_map_filter_header.xml
@@ -179,6 +179,16 @@
         </LinearLayout>
     </RelativeLayout>
 
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:background="@color/bg_background" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="6dp"
+        android:background="@color/back_line" />
+
     <TextView
         android:id="@+id/tv_review_count"
         android:layout_width="match_parent"
@@ -188,6 +198,7 @@
         tools:text="총 12개의 객실이 있습니다."
         android:gravity="center_vertical"
         android:textColor="@color/detail_more_color"
-        android:background="@color/footerview" />
+        android:background="@color/footerview"
+        android:visibility="gone"/>
 
 </LinearLayout>
