--- a/app/src/main/res/layout/layout_search_map_filter_header2.xml
+++ b/app/src/main/res/layout/layout_search_map_filter_header2.xml
@@ -115,7 +115,7 @@
 
     <View
         android:layout_width="match_parent"
-        android:layout_height="7dp"
+        android:layout_height="6dp"
         android:background="@color/back_line" />
 
     <TextView
@@ -127,6 +127,7 @@
         tools:text="총 12개의 객실이 있습니다."
         android:gravity="center_vertical"
         android:textColor="@color/detail_more_color"
-        android:background="@color/footerview" />
+        android:background="@color/footerview"
+        android:visibility="gone"/>
 
 </LinearLayout>
