--- a/app/src/main/res/layout/fragment_pager_main.xml
+++ b/app/src/main/res/layout/fragment_pager_main.xml
@@ -2,16 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/dialog_container"
-    android:layout_width="match_parent"
+    android:layout_width="340dp"
     android:layout_height="494dp"
     android:gravity="center"
     android:orientation="vertical">
 
     <RelativeLayout
-        android:layout_width="match_parent"
+        android:layout_width="340dp"
         android:layout_height="435dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:background="@android:color/transparent">
 
         <com.hotelnow.utils.ViewPagerCustom
@@ -37,11 +35,9 @@
     </RelativeLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="340dp"
         android:layout_height="61dp"
         android:gravity="center"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp"
         android:orientation="horizontal"
         android:background="@drawable/white_bottom_round">
 
