--- a/app/src/main/res/layout/layout_detail_activity.xml
+++ b/app/src/main/res/layout/layout_detail_activity.xml
@@ -113,6 +113,7 @@
                 android:layout_width="49dp"
                 android:layout_height="20dp"
                 android:scaleType="fitXY"
+                android:layout_marginRight="5dp"
                 android:visibility="gone"
                 android:background="@drawable/tag_benefit_point" />
 
