--- a/app/src/main/res/layout/layout_detail_hotel.xml
+++ b/app/src/main/res/layout/layout_detail_hotel.xml
@@ -143,6 +143,7 @@
                 android:layout_width="50dp"
                 android:layout_height="20dp"
                 android:scaleType="fitXY"
+                android:layout_marginRight="5dp"
                 android:visibility="gone"
                 android:background="@drawable/tag_benefit_point" />
 
