--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,13 +1,12 @@
 <resources>
 
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
-        <item name="colorAccent">@color/colorAccent</item>
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/purple</item>
+        <item name="colorPrimary">@color/purple</item>
+        <item name="colorPrimaryDark">@color/purple</item>
         <item name="android:windowBackground">@color/background</item>
-
         <item name="windowActionModeOverlay">true</item>
-        <item name="actionModeBackground">@color/colorActionMode</item>
+        <item name="actionModeBackground">@color/purple</item>
         <item name="actionModeCloseDrawable">@drawable/ic_close</item>
     </style>
 
