--- a/app/src/main/res/layout/layout_map_item.xml
+++ b/app/src/main/res/layout/layout_map_item.xml
@@ -106,7 +106,7 @@
                 android:id="@+id/img_hotel"
                 android:layout_width="match_parent"
                 android:layout_height="90dp"
-                android:scaleType="fitXY" />
+                android:scaleType="centerCrop" />
 
             <ImageView
                 android:id="@+id/iv_favorite"
