--- a/app/src/main/res/layout/layout_detail_map.xml
+++ b/app/src/main/res/layout/layout_detail_map.xml
@@ -49,12 +49,11 @@
         android:layout_height="160dp"
         android:layout_marginTop="12dp">
 
-        <ImageView
-            android:id="@+id/map_img"
+        <fragment
+            android:name="com.google.android.gms.maps.SupportMapFragment"
+            android:id="@+id/map"
             android:layout_width="match_parent"
-            android:layout_height="160dp"
-            android:src="@color/holder_c"
-            android:scaleType="centerCrop" />
+            android:layout_height="160dp" />
 
         <ImageView
             android:id="@+id/btn_kimkisa"
