--- a/app/src/main/res/layout/layout_search_map_filter_header2.xml
+++ b/app/src/main/res/layout/layout_search_map_filter_header2.xml
@@ -101,12 +101,19 @@
         </RelativeLayout>
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/map_img"
+    <fragment
+        android:id="@+id/map"
+        android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="130dp"
-        android:layout_marginTop="7dp"
-        android:scaleType="fitXY" />
+        android:layout_marginTop="7dp"></fragment>
+
+    <!--<ImageView-->
+        <!--android:id="@+id/map_img"-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="130dp"-->
+        <!--android:layout_marginTop="7dp"-->
+        <!--android:scaleType="fitXY" />-->
 
     <View
         android:layout_width="match_parent"
