--- a/app/src/main/res/layout/layout_fragment_search_map_filter_header.xml
+++ b/app/src/main/res/layout/layout_fragment_search_map_filter_header.xml
@@ -101,12 +101,20 @@
         </RelativeLayout>
     </LinearLayout>
 
-    <fragment
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="130dp"
-        android:layout_marginTop="7dp"></fragment>
+        android:layout_marginTop="7dp">
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/map"
+            android:layout_width="match_parent"
+            android:layout_height="130dp" />
+        <View
+            android:id="@+id/clickmap"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"/>
+    </RelativeLayout>
 
     <View
         android:layout_width="match_parent"
