--- a/app/src/main/res/layout/layout_fragment_search_map_filter_header2.xml
+++ b/app/src/main/res/layout/layout_fragment_search_map_filter_header2.xml
@@ -56,7 +56,7 @@
         </RelativeLayout>
 
         <RelativeLayout
-            android:id="@+id/btn_date"
+            android:id="@+id/btn_category"
             android:layout_width="match_parent"
             android:layout_height="34dp"
             android:layout_marginTop="7dp"
@@ -66,14 +66,14 @@
             android:background="@drawable/style_edittext_gray_2border">
 
             <ImageView
-                android:id="@+id/iv_date"
+                android:id="@+id/iv_category"
                 android:layout_width="14dp"
                 android:layout_height="14dp"
                 android:layout_marginLeft="8dp"
                 android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"
                 android:scaleType="fitXY"
-                android:background="@drawable/ico_input_calendar2" />
+                android:background="@drawable/ico_input_category2" />
 
             <ImageView
                 android:id="@+id/iv_open2"
@@ -86,97 +86,34 @@
                 android:background="@drawable/btn_detail_open" />
 
             <TextView
-                android:id="@+id/tv_date"
+                android:id="@+id/tv_category"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_toLeftOf="@+id/iv_open2"
-                android:layout_toRightOf="@+id/iv_date"
+                android:layout_toRightOf="@+id/iv_category"
                 android:textSize="13dp"
                 android:maxLines="1"
                 android:ellipsize="end"
                 android:layout_marginLeft="8dp"
                 android:layout_centerVertical="true"
                 android:textColor="@color/purple"
-                tools:text="9/21/~9/22" />
+                android:text="테마선택" />
         </RelativeLayout>
     </LinearLayout>
 
-    <fragment
-        android:id="@+id/map"
-        android:name="com.google.android.gms.maps.SupportMapFragment"
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="130dp"
-        android:layout_marginTop="7dp"></fragment>
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:background="@color/bg_background" />
-
-    <RelativeLayout
-        android:id="@+id/bannerview"
-        android:layout_width="match_parent"
-        android:layout_height="126dp"
-        android:background="@color/white"
-        android:visibility="gone">
-
-        <LinearLayout
-            android:id="@+id/gap"
+        android:layout_marginTop="7dp">
+        <com.google.android.gms.maps.MapView
+            android:id="@+id/map"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/bg_background" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="7dp"
-                android:background="@color/back_line" />
-        </LinearLayout>
-
-        <com.hotelnow.utils.ViewPagerCustom
-            android:id="@+id/autoViewPager"
+            android:layout_height="130dp" />
+        <View
+            android:id="@+id/clickmap"
             android:layout_width="match_parent"
-            android:layout_height="110dp"
-            android:scaleType="fitXY"
-            android:layout_below="@+id/gap" />
-
-        <TextView
-            android:id="@+id/page"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/pager_count_round"
-            android:layout_alignParentRight="true"
-            android:layout_alignParentBottom="true"
-            android:textColor="@color/white"
-            android:textSize="11dp"
-            android:paddingTop="5dp"
-            android:paddingBottom="5dp"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
-            android:layout_marginBottom="20dp"
-            android:layout_marginRight="24dp"
-            tools:text=" 3/10 + " />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:layout_below="@+id/autoViewPager">
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/bg_background" />
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="7dp"
-                android:background="@color/back_line" />
-        </LinearLayout>
+            android:layout_height="match_parent"
+            android:background="@android:color/transparent"/>
     </RelativeLayout>
 
     <View
