--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
     <data>
 
@@ -8,73 +9,108 @@
             name="main"
             type="com.hotelnow.activity.MainActivity" />
     </data>
-
-    <android.support.design.widget.CoordinatorLayout android:id="@+id/myCoordinator"
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="false"
-        tools:context="com.hotelnow.activity.MainActivity"
-        android:background="@color/white">
-
-        <android.support.design.widget.AppBarLayout
-            android:id="@+id/appbar"
+        android:layout_height="match_parent">
+        <android.support.design.widget.CoordinatorLayout android:id="@+id/myCoordinator"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/white"
-            android:theme="@style/AppTheme.AppBarOverlay"
-            app:elevation="0dp">
+            android:layout_height="match_parent"
+            android:fitsSystemWindows="false"
+            android:background="@color/white">
 
-            <android.support.design.widget.CollapsingToolbarLayout
-                android:id="@+id/toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="@drawable/style_top_bar"
-                app:layout_scrollFlags="scroll|enterAlways">
-
-                <include
-                    android:id="@+id/layout_search"
-                    layout="@layout/layout_search_header" />
-
-            </android.support.design.widget.CollapsingToolbarLayout>
-
-
-            <android.support.design.widget.TabLayout
-                android:id="@+id/tab_layout"
+            <android.support.design.widget.AppBarLayout
+                android:id="@+id/appbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/white"
-                android:textSize="15dp"
-                app:tabTextColor="@color/unselecttab"
-                app:tabSelectedTextColor="@color/purple"
-                app:tabIndicatorColor="@color/purple"
-                app:tabMode="fixed" />
+                android:theme="@style/AppTheme.AppBarOverlay"
+                app:elevation="0dp">
 
-            <View
+                <android.support.design.widget.CollapsingToolbarLayout
+                    android:id="@+id/toolbar"
+                    android:layout_width="match_parent"
+                    android:layout_height="?attr/actionBarSize"
+                    android:background="@drawable/style_top_bar"
+                    app:layout_scrollFlags="scroll|enterAlways">
+
+                    <include
+                        android:id="@+id/layout_search"
+                        layout="@layout/layout_search_header" />
+
+                </android.support.design.widget.CollapsingToolbarLayout>
+
+
+                <android.support.design.widget.TabLayout
+                    android:id="@+id/tab_layout"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@color/white"
+                    android:textSize="15dp"
+                    app:tabTextColor="@color/unselecttab"
+                    app:tabSelectedTextColor="@color/purple"
+                    app:tabIndicatorColor="@color/purple"
+                    app:tabMode="fixed" />
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/back_line" />
+
+            </android.support.design.widget.AppBarLayout>
+
+
+            <FrameLayout
+                android:id="@+id/screen_container"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/back_line" />
+                android:layout_height="match_parent"
+                app:layout_behavior="@string/appbar_scrolling_view_behavior"
+                android:background="@color/footerview" />
 
-        </android.support.design.widget.AppBarLayout>
+            <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
+                android:id="@+id/navigation"
+                android:layout_width="match_parent"
+                android:layout_height="56dp"
+                android:layout_gravity="bottom|end"
+                android:background="@color/white"
+                app:itemTextColor="@color/select_state_button"
+                app:itemIconTint="@color/select_state_button"
+                app:menu="@menu/nav_items"
+                app:layout_behavior="com.hotelnow.utils.BottomNavigationBehavior" />
 
+            <RelativeLayout
+                android:id="@+id/toast_layout"
+                android:layout_width="match_parent"
+                android:layout_height="60dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
+                android:layout_gravity="center"
+                android:visibility="gone"
+                android:background="@drawable/toast_round">
 
-        <FrameLayout
-            android:id="@+id/screen_container"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior"
-            android:background="@color/footerview" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:gravity="center">
 
-        <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
-            android:id="@+id/navigation"
-            android:layout_width="match_parent"
-            android:layout_height="56dp"
-            android:layout_gravity="bottom|end"
-            android:background="@color/white"
-            app:itemTextColor="@color/select_state_button"
-            app:itemIconTint="@color/select_state_button"
-            app:menu="@menu/nav_items"
-            app:layout_behavior="com.hotelnow.utils.BottomNavigationBehavior" />
+                    <ImageView
+                        android:id="@+id/ico_favorite"
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:scaleType="fitXY"
+                        android:visibility="gone"
+                        android:background="@drawable/ico_titbar_favorite_active" />
+
+                    <TextView
+                        android:id="@+id/tv_toast"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="14dp"
+                        android:layout_marginLeft="5dp"
+                        android:textColor="@color/white"
+                        tools:text="관심 상품 담기 성공" />
+                </LinearLayout>
+            </RelativeLayout>
+        </android.support.design.widget.CoordinatorLayout>
 
         <RelativeLayout
             android:id="@+id/wrapper"
@@ -93,39 +129,5 @@
                 app:indicator_color="@color/purple" />
 
         </RelativeLayout>
-
-        <RelativeLayout
-            android:id="@+id/toast_layout"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:layout_gravity="center"
-            android:visibility="gone"
-            android:background="@drawable/toast_round">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center">
-
-                <ImageView
-                    android:id="@+id/ico_favorite"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:scaleType="fitXY"
-                    android:visibility="gone"
-                    android:background="@drawable/ico_titbar_favorite_active" />
-
-                <TextView
-                    android:id="@+id/tv_toast"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textSize="14dp"
-                    android:layout_marginLeft="5dp"
-                    android:textColor="@color/white"
-                    tools:text="관심 상품 담기 성공" />
-            </LinearLayout>
-        </RelativeLayout>
-    </android.support.design.widget.CoordinatorLayout>
+    </RelativeLayout>
 </layout>
