--- a/app/src/main/res/values/array.xml
+++ b/app/src/main/res/values/array.xml
@@ -26,11 +26,11 @@
         <item>price_high</item>
     </string-array>
     <string-array name="category_text">
-        <item>특1급</item>
-        <item>특2급</item>
-        <item>1급</item>
-        <item>2급</item>
-        <item>3급</item>
+        <item>5성급</item>
+        <item>4성급</item>
+        <item>3성급</item>
+        <item>2성급</item>
+        <item>1성급</item>
         <item>가족호텔</item>
         <item>비지니스</item>
         <item>부티크</item>
