--- a/app/src/main/res/layout/layout_footer.xml
+++ b/app/src/main/res/layout/layout_footer.xml
@@ -82,9 +82,9 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/term_title"
-                    android:textSize="12dp"
+                    android:textSize="11dp"
                     android:padding="2dp"
-                    android:layout_marginRight="7dp"
+                    android:layout_marginRight="2dp"
                     android:textColor="@color/graytxt" />
 
                 <TextView
@@ -93,16 +93,16 @@
                     android:background="@color/bg_background"
                     android:layout_marginTop="3dp"
                     android:layout_marginBottom="3dp"
-                    android:layout_marginRight="7dp" />
+                    android:layout_marginRight="2dp" />
 
                 <TextView
                     android:id="@+id/term2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/term_txt2"
-                    android:textSize="12dp"
+                    android:textSize="11dp"
                     android:padding="2dp"
-                    android:layout_marginRight="7dp"
+                    android:layout_marginRight="2dp"
                     android:textColor="@color/graytxt" />
 
                 <TextView
@@ -111,16 +111,34 @@
                     android:background="@color/bg_background"
                     android:layout_marginTop="3dp"
                     android:layout_marginBottom="3dp"
-                    android:layout_marginRight="7dp" />
+                    android:layout_marginRight="2dp" />
 
                 <TextView
                     android:id="@+id/term3"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="@string/term_txt3"
-                    android:textSize="12dp"
+                    android:textSize="11dp"
                     android:padding="2dp"
-                    android:layout_marginRight="7dp"
+                    android:layout_marginRight="2dp"
+                    android:textColor="@color/graytxt" />
+
+                <TextView
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/bg_background"
+                    android:layout_marginTop="3dp"
+                    android:layout_marginBottom="3dp"
+                    android:layout_marginRight="2dp" />
+
+                <TextView
+                    android:id="@+id/term4"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="@string/term_txt4"
+                    android:textSize="11dp"
+                    android:padding="2dp"
+                    android:layout_marginRight="1dp"
                     android:textColor="@color/graytxt" />
 
             </LinearLayout>
@@ -129,7 +147,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="(주)야놀자는 통신판매중개자로서 통신판매의 당사자가 아니며 상품의 예약, 이용 및 환불 등과 관련한 의무와 책임은 각 판매자에게 있습니다."
-                android:textSize="12dp"
+                android:textSize="11dp"
                 android:padding="2dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginRight="7dp"
