--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -289,7 +289,7 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="0.7"
                         android:paddingLeft="12dp"
-                        android:text="만 14세 이상 확인"
+                        android:text="만 14세 이상 확인(필수)"
                         android:textSize="13dp"
                         android:textColor="@color/blacktxt"
                         android:button="@drawable/checkbox_icon" />
@@ -310,7 +310,7 @@
                         android:layout_weight="0.7"
                         android:paddingLeft="12dp"
                         android:textSize="13dp"
-                        android:text="서비스 이용약관 동의"
+                        android:text="서비스 이용약관 동의(필수)"
                         android:textColor="@color/blacktxt"
                         android:button="@drawable/checkbox_icon" />
 
@@ -341,7 +341,7 @@
                         android:layout_weight="0.7"
                         android:paddingLeft="12dp"
                         android:textSize="13dp"
-                        android:text="개인정보처리방침 동의"
+                        android:text="개인정보 수집 이용 동의(필수)"
                         android:textColor="@color/blacktxt"
                         android:button="@drawable/checkbox_icon" />
 
@@ -372,7 +372,7 @@
                         android:layout_weight="0.7"
                         android:paddingLeft="12dp"
                         android:textSize="13dp"
-                        android:text="위치정보 이용약관 동의"
+                        android:text="위치정보 이용약관 동의(선택)"
                         android:textColor="@color/blacktxt"
                         android:button="@drawable/checkbox_icon" />
 
