RecyclerView 일때 ion 라이브러리에서 디폴트 값인 fade in 값이 적용안됨 애니메이션 추가로 리스트와 동일한 효과 적용

--- a/app/src/main/res/layout/fragment_a_result.xml
+++ b/app/src/main/res/layout/fragment_a_result.xml
@@ -10,6 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:divider="@android:color/transparent"
+        android:overScrollMode="never"
         android:listSelector="@android:color/transparent"></ListView>
 
     <Button
