--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -68,8 +68,7 @@
             <FrameLayout
                 android:id="@+id/view_pager"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_below="@+id/view_filter"/>
+                android:layout_height="match_parent" />
         </android.support.v4.widget.NestedScrollView>
     </RelativeLayout>
 </layout>
