--- a/app/src/main/res/layout/activity_search_result.xml
+++ b/app/src/main/res/layout/activity_search_result.xml
@@ -72,7 +72,7 @@
 
     </android.support.design.widget.TabLayout>
 
-    <com.hotelnow.utils.NonSwipeableViewPager
+    <FrameLayout
         android:id="@+id/view_pager"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
