메인 상단탭 Indicator 디자인 적용2

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -48,8 +48,7 @@
                     android:textSize="15dp"
                     app:tabTextColor="@color/unselecttab"
                     app:tabSelectedTextColor="@color/purple"
-                    app:tabIndicatorColor="@color/purple"
-                    app:tabMode="fixed" />
+                    app:tabIndicatorColor="@color/purple" />
 
                 <View
                     android:layout_width="match_parent"
