--- a/app/src/main/res/layout/layout_reservation_price.xml
+++ b/app/src/main/res/layout/layout_reservation_price.xml
@@ -130,11 +130,62 @@
             tools:text="329,000원" />
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/booking_save_point"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="5dp"
+        android:gravity="right"
+        android:orientation="horizontal">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="13dp"
+            android:layout_gravity="bottom"
+            android:textColor="@color/redtext"
+            android:text="@string/reservation_point" />
+
+        <TextView
+            android:id="@+id/tv_total_discount_point"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="17dp"
+            android:layout_marginLeft="3dp"
+            android:layout_gravity="bottom"
+            android:maxLines="1"
+            android:textStyle="bold"
+            android:textColor="@color/redtext"
+            tools:text="16,450" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="13dp"
+            android:layout_gravity="bottom"
+            android:layout_marginLeft="2dp"
+            android:textColor="@color/termtext"
+            android:text="원 적립 예정" />
+
+    </LinearLayout>
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textColor="@color/graytxt"
+        android:text="@string/reservation_sale_price_info"
+        android:gravity="right"
+        android:textSize="12dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp" />
+
     <TableLayout
         android:id="@+id/sub_products"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="23dp"
+        android:layout_marginTop="20dp"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:paddingBottom="10dp"
@@ -179,52 +230,4 @@
                 style="@android:style/TextAppearance.Small" />
         </TableRow>
     </TableLayout>
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textColor="@color/graytxt"
-        android:text="@string/reservation_sale_price_info"
-        android:gravity="right"
-        android:textSize="12dp"
-        android:layout_marginTop="6dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp" />
-
-    <LinearLayout
-        android:id="@+id/booking_save_point"
-        android:layout_width="match_parent"
-        android:layout_height="64dp"
-        android:layout_marginLeft="20dp"
-        android:layout_marginRight="20dp"
-        android:layout_marginTop="19dp"
-        android:background="@drawable/style_edittext_gray_2border"
-        android:orientation="horizontal">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="12dp"
-            android:layout_marginLeft="30dp"
-            android:layout_gravity="center"
-            android:paddingTop="2dp"
-            android:paddingBottom="2dp"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
-            android:textColor="@color/white"
-            android:text="@string/reservation_point"
-            android:background="@drawable/point_round" />
-
-        <TextView
-            android:id="@+id/tv_total_discount_point"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="12dp"
-            android:layout_marginLeft="8dp"
-            android:layout_gravity="center"
-            android:maxLines="1"
-            android:textColor="@color/blacktxt"
-            tools:text="16,450원 적립 예정(체크아웃 이후 지급)" />
-
-    </LinearLayout>
 </LinearLayout>
