--- a/app/src/main/res/layout/layout_search_header.xml
+++ b/app/src/main/res/layout/layout_search_header.xml
@@ -12,28 +12,29 @@
     <RelativeLayout
         android:id="@+id/search_main"
         android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
+        android:layout_height="42dp"
         android:orientation="horizontal"
         android:gravity="center"
         android:layout_centerVertical="true"
-        android:background="@android:color/transparent">
+        android:background="@drawable/style_search_border">
 
         <ImageView
             android:id="@+id/ic_search"
-            android:layout_width="18dp"
-            android:layout_height="18dp"
+            android:layout_width="22dp"
+            android:layout_height="22dp"
             android:layout_centerVertical="true"
             android:background="@drawable/ico_top_search"
             android:layout_marginLeft="16dp" />
 
         <TextView
             android:id="@+id/txt_search"
-            android:layout_toRightOf="@+id/ic_search"
+            android:layout_marginLeft="38dp"
+            android:layout_marginRight="38dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="8dp"
-            android:textColor="@color/white"
-            android:textSize="15dp"
+            android:textColor="@color/search_main_txt"
+            android:textSize="16dp"
+            android:gravity="center"
             android:layout_centerVertical="true"
             android:text="어떤 여행을 찾고 있나요?" />
     </RelativeLayout>
