--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -44,6 +44,9 @@
     <color name="hotel_color">#22775032</color>
     <color name="theme_dim">#66000000</color>
     <color name="holder_c">#f0f0f0</color>
+    <color name="search_main">#80906ac0</color>
+    <color name="search_main_txt">#ddc8f9</color>
+
 
 
     <!--등급-->
