--- a/app/src/main/res/layout/layout_detail_hotel.xml
+++ b/app/src/main/res/layout/layout_detail_hotel.xml
@@ -13,13 +13,28 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp">
 
-        <TextView
-            android:id="@+id/tv_category"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/termtext"
-            android:textSize="14dp"
-            tools:text="리조트" />
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/tv_category"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="@color/termtext"
+                android:textSize="14dp"
+                tools:text="리조트" />
+
+            <ImageView
+                android:id="@+id/iv_kto_jta"
+                android:layout_width="50dp"
+                android:layout_height="19dp"
+                android:layout_marginLeft="8dp"
+                android:scaleType="fitXY"
+                android:visibility="gone"
+                android:background="@drawable/ico_cert_kto"/>
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tv_hotelname"
@@ -27,7 +42,7 @@
             android:layout_height="wrap_content"
             android:textColor="@color/blacktxt"
             android:textSize="20dp"
-            android:layout_marginTop="2dp"
+            android:layout_marginTop="6dp"
             android:maxLines="2"
             android:ellipsize="end"
             tools:text="노보텔 앰배서더 서울 용산 호텔입니다" />
