--- a/app/src/main/res/layout/layout_my_savemoney_item.xml
+++ b/app/src/main/res/layout/layout_my_savemoney_item.xml
@@ -109,7 +109,7 @@
             android:gravity="center"
             android:textSize="14dp"
             android:textColor="@color/termtext"
-            android:text="적립금 내역이 없습니다" />
+            android:text="포인트 내역이 없습니다" />
     </LinearLayout>
 
 </RelativeLayout>
