--- a/app/src/main/res/layout/layout_mysave_header.xml
+++ b/app/src/main/res/layout/layout_mysave_header.xml
@@ -80,8 +80,16 @@
                     android:layout_height="wrap_content"
                     android:textSize="40dp"
                     android:textColor="@color/white"
-                    android:layout_marginLeft="4dp"
                     tools:text="12,740" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18dp"
+                    android:textColor="@color/white"
+                    android:layout_marginLeft="4dp"
+                    android:layout_marginTop="8dp"
+                    android:text="p" />
             </LinearLayout>
         </RelativeLayout>
     </LinearLayout>
